--- a/public/styles.css
+++ b/public/styles.css
@@ -14,8 +14,40 @@ html {
     margin: 0;
   }
   
+  
+header {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    border-bottom: 1px solid black;
+  }
+  
+  header > div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
   .header-name {
     flex: 1;
+  }
+  .header-name input {
+    width: 100%;
+    background: transparent;
+    border: none;
+    text-overflow: ellipsis;
+    font-size: 1rem;
+    font-weight: bold;
+    padding: 5px;
+    margin-left: 5px;
+    border-bottom: 1px solid transparent;
+  }
+  .header-name input:hover, .header-name input:focus {
+    border-bottom: 1px solid gray;
+    outline: none;
+  }
+  .header-name input:not(:focus) {
+    cursor: pointer;
   }
 
   .playground {
@@ -26,3 +58,32 @@ html {
     align-items: center;
     font-size: 3rem;
   }
+
+
+.colour-picker {
+    border: none;
+    padding: 0;
+  }
+  .colour-picker input {
+    opacity: 0;
+    position: absolute;
+  }
+  .colour-picker span {
+    content: '';
+    display: inline-block;
+    width: 1.5rem;
+    height: 1.5rem;
+    margin: 5px 15px;
+    border: 2px solid black;
+    transition: 0.3s;
+  }
+  .colour-picker label {
+    cursor: pointer;
+  }
+  .colour-picker label:hover span {
+    transform: rotate(45deg);
+  }
+  .colour-picker input:checked + span {
+    transform: scale(1.5);
+  }
+  
