--- a/public/styles.css
+++ b/public/styles.css
@@ -87,6 +87,8 @@ header {
     transform: scale(1.5);
   }
   
+ 
+
   .window-size {
     position: absolute;
     bottom: 5px;
@@ -102,7 +104,6 @@ header {
   }
 
   .button-options {
-    border: 0;
     background: none;
     border: 0.1rem solid #000;
     border-radius: 0.25rem;
@@ -116,9 +117,26 @@ header {
 
   }
 
+  .paint-options span {
+    background: none;
+    border: 0.1rem solid #000;
+    border-radius: 0.25rem;
+    width: 2.5rem;
+    height: 2.5rem;
+    padding: 3px 5px 3px 5px;
+    margin: 5px;
+    text-align: center;
+    font-size:1.6rem;
+    cursor: pointer;
+  }
+
+  .paint-options input {
+    opacity: 0;
+    position: absolute;
+  }
   .paint-options{
   }
-  
+
   .colour-options{
 
   }
